Layout Issues and Spelling

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,9 +7,10 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica";
     color: #fff;
-    background-color: #211f1f;
+    background: url('../img/web-design-mrnokhei-albums-2434181.jpg');
+    
 }
 
 html {
@@ -33,8 +34,8 @@ h6 {
 
 p {
     margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
+    font-size: 14px;
+    line-height: 1.3;
 }
 
 @media(min-width:768px) {
@@ -311,13 +312,18 @@ a:focus {
 }
 
 #about {
-    padding: 10% }
+    padding: 10% 
+}
+
 
 #about p {
     clear: right;
-    margin: 0 0 0 50%;
+    margin: 25% 0% 0% 50%;
     max-width: 100%;
-    
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: 100;
+    text-align: justify;
 }
 
 #about img {
